--- a/Movies.css
+++ b/Movies.css
@@ -3,6 +3,12 @@ body {
   margin: 0;
   background-color: #101010;
   color: #fff;
+  font-size: 18px;
+}
+p , li {
+  line-height: 1.6;
+  margin: 0.5rem 0;
+  font-size: 1.2rem;
 }
 
 header {
@@ -12,13 +18,14 @@ header {
 }
 
 nav {
+  display: flex;
+  justify-content: space-evenly;
   background-color: #151515;
-  padding: 1rem;
+  padding: 1.2rem;
   text-align: center;
 }
 
 nav a {
-  margin: 0 1rem;
   color: #fff;
   text-decoration: none;
 }
@@ -26,6 +33,11 @@ nav a {
 nav a:hover {
   transition: ease-in-out 0.2s color;
   color: #e62429;
+}
+#WatchOrder {
+  background-color: #151515;
+  margin-top: 10px;
+  padding:  10px; ;
 }
 
 .filter-buttons {
@@ -43,10 +55,17 @@ nav a:hover {
   cursor: pointer;
   font-weight: bold;
   border-radius: 5px;
+  height: 50px;
+  transition: background-color 0.3s ease;
+  font-size: 1rem;  
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .filter-buttons button:hover {
+
   background-color: #c41d24;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  
 }
 
 .Release_container {
